--- a/ADMFacturar/Views/Home/Index.cshtml
+++ b/ADMFacturar/Views/Home/Index.cshtml
@@ -1,19 +1,7 @@
-﻿<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+﻿﻿@{
+    ViewData["Title"] = "Inicio";
+}
 
-<div class="w-full">
-    <div class="rwo mt-5">
-        <div class="col-sm-4 offser-sm-4">
-            <form>
-                <div class="form-group text-white">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" placeholder="Escriba el correo">
-                </div>
-                <div class="form-group text-white">
-                    <label for="exampleInputPassword1">Contraseña</label>
-                    <input type="password" class="form-control" placeholder="Contraseña">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </div>
+<div class="flex">
+    <img src="~/imgs/admlogo.png" class="imgContent" />
 </div>
