--- a/ADMFacturar/wwwroot/css/Custom.css
+++ b/ADMFacturar/wwwroot/css/Custom.css
@@ -86,6 +86,32 @@
     }
 }
 
+.flex-containerDen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh; /* Altura de la ventana */
+}
+
+.center-all {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.mr-img {
+    margin-right: 10rem;
+}
+
+.imgContentDen {
+    width: 30vh; /* Ajusta el tamaño de la imagen según sea necesario */
+    height: auto; /* Mantén la proporción de la imagen */
+}
+
+.txtDen {
+    font-size: 2rem; /* Ajusta el tamaño del texto según sea necesario */
+    color: white;
+}
+
 
 .font-family-karla {
     font-family: karla;
