--- a/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
@@ -1,37 +1,47 @@
-﻿
-<link href="~/css/custom.css" rel="stylesheet" />
+﻿<link href="~/css/custom.css" rel="stylesheet" />
 
-        <main class="main-container">
-            <div class="cards-container">
+<main class="main-container">
+    <div class="cards-container">
         <div class="flex flex-row flex-wrap justify-center gap-6">
 
+            @if (User.IsInRole("Administrador"))
+            {
+                <a asp-action="Index" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
+                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                        <i class="fa-solid fa-box-open text-5xl text-indigo-500 mb-4"></i>
+                        <h3 class="text-lg font-semibold text-gray-800">Ingreso de Inventario</h3>
+                        <p class="text-gray-600">Administración de Ingresos de Inventario</p>
+                    </div>
+                </a>
 
-            <a asp-action="Index" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
-                    <i class="fa-solid fa-box-open text-5xl text-indigo-500 mb-4"></i>
-                    <h3 class="text-lg font-semibold text-gray-800">Ingreso de Inventario</h3>
-                    <p class="text-gray-600">Administración de Ingresos de Inventario</p>
-                </div>
-            </a>
+                <a asp-action="IndexSalida" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
+                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                        <i class="fa-solid fa-dolly text-5xl text-indigo-500 mb-4"></i>
+                        <h3 class="text-lg font-semibold text-gray-800">Salida de Inventario</h3>
+                        <p class="text-gray-600">Administración de Salidas de Inventario</p>
+                    </div>
+                </a>
 
-            <a asp-action="IndexSalida" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
-                    <i class="fa-solid fa-dolly text-5xl text-indigo-500 mb-4"></i>
-                    <h3 class="text-lg font-semibold text-gray-800">Salida de Inventario</h3>
-                    <p class="text-gray-600">Administración de Salidas de Inventario</p>
-                </div>
-            </a>
+                <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
+                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                        <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
+                        <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
+                        <p class="text-gray-600">Consulta de Existencias de Artículos</p>
+                    </div>
+                </a>
+            }
 
-            <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
-                    <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
-                    <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
-                    <p class="text-gray-600">Consulta de Existencias de Artículos</p>
-                </div>
-            </a>
+            @if (User.IsInRole("Usuario"))
+            {
+                <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
+                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                        <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
+                        <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
+                        <p class="text-gray-600">Consulta de Existencias de Artículos</p>
+                    </div>
+                </a>
+            }
 
-        
         </div>
     </div>
-
 </main>
