--- a/ADMFacturar/Views/Seguridad/Login.cshtml
+++ b/ADMFacturar/Views/Seguridad/Login.cshtml
@@ -25,7 +25,7 @@
 
             <div>
                 <div class="flex items-center justify-between">
-                    <label asp-for="Contra" class="block text-lg font-medium leading-7 text-white"></label>
+                    <label asp-for="Contra" class="block text-lg font-medium leading-7 text-white">Contraseña</label>
                 </div>
                 <div class="mt-2">
                     <input asp-for="Contra" type="password" class="block w-full rounded-lg border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-lg sm:leading-7" style="padding-left: 15px;" required>
