--- a/ADMFacturar/Views/Proveedores/Index.cshtml
+++ b/ADMFacturar/Views/Proveedores/Index.cshtml
@@ -17,6 +17,10 @@
 	<link href="~/css/custom.css" rel="stylesheet" />
 	<!-- SweetAlert2 CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+	<!-- Tabla Paginar  -->
+	<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
 
@@ -43,15 +47,13 @@
 	<div class="w-full mt-8">
 		<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
 			<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Proveedores</h3>
-			<div>
 				<a onclick="abrirModal('modalCrearProveedor')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Proveedor</a>
-			</div>
 		</div>
 
 
 		<!--                  Tabla                        -->
 		<div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-			<table class="min-w-full leading-normal">
+			<table id="tablaProveedores" class="min-w-full leading-normal">
 				<thead>
 					<tr class="bg-gray-800 text-white">
 						<th class="py-3 text-center">Código Proveedor</th>
@@ -320,6 +322,29 @@
 
 
 		//   <!--Fin Validacion boton eliminar-- >
+
+		//Funcion para paginar en index
+		$(document).ready(function () {
+			$('#tablaProveedores').DataTable({
+				"paging": true, // Habilita la paginación
+				"pagingType": "simple_numbers", // Tipo de paginación
+				"lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Opciones de cantidad de registros por página
+				"searching": false, // Deshabilita la caja de búsqueda
+				"language": {
+					"lengthMenu": " Mostrar _MENU_ registros por página",
+					"zeroRecords": "No se encontraron resultados",
+					"info": " Mostrando página _PAGE_ de _PAGES_",
+					"infoEmpty": "No hay registros disponibles",
+					"infoFiltered": "(filtrado de _MAX_ registros totales)",
+					"paginate": {
+						"first": "Primero",
+						"last": "Último",
+						"next": "Siguiente",
+						"previous": "Anterior"
+					}
+				}
+			});
+		});
 	</script>
 </body>
 </html>
