--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -14,6 +14,10 @@
     <link href="~/css/custom.css" rel="stylesheet" />
     <!-- SweetAlert2 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+    <!-- Tabla Paginar  -->
+    <link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
 
@@ -52,7 +56,7 @@
         <button class="btn btnEditar" title="Editar Template" onclick="abrirModal('modalCrearTransporte')">Test modal<button/>
     </div> *@
     <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-        <table class="min-w-full leading-normal">
+            <table id="tablaTransportes" class="min-w-full leading-normal">
             <thead>
                 <tr class="bg-gray-800 text-white">
                     <th class="py-3 text-center">Código Transporte</th>
@@ -62,7 +66,7 @@
 
                 </tr>
             </thead>
-            <tbody id="bodyTablaTransportes" class="text-gray-700">
+                <tbody id="bodyTablaTransportes" class="text-gray-700">
                 @if (tranportes != null)
                 {
                     @foreach (var transporte in tranportes)
@@ -288,6 +292,30 @@
             });
         });
         // <!-- Fin Validación botón desactivar -->
+
+
+        //Funcion para paginar en index
+        $(document).ready(function () {
+            $('#tablaTransportes').DataTable({
+                "paging": true, // Habilita la paginación
+                "pagingType": "simple_numbers", // Tipo de paginación
+                "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Opciones de cantidad de registros por página
+                "searching": false, // Deshabilita la caja de búsqueda
+                "language": {
+                    "lengthMenu": " Mostrar _MENU_ registros por página",
+                    "zeroRecords": "No se encontraron resultados",
+                    "info": " Mostrando página _PAGE_ de _PAGES_",
+                    "infoEmpty": "No hay registros disponibles",
+                    "infoFiltered": "(filtrado de _MAX_ registros totales)",
+                    "paginate": {
+                        "first": "Primero",
+                        "last": "Último",
+                        "next": "Siguiente",
+                        "previous": "Anterior"
+                    }
+                }
+            });
+        });
 </script>
 </body>
 </html>
